# Fastgram

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  deploy_and_run.sh  pyproject.toml  setup.py  setup_node.sh
bench/: bench_config.json  bench_suite_config.json  build_bench_config.json  queries_v4_pileval_gpt2.txt  tg_bench_draft.cc  tg_bench_find.cc  tg_bench_ntd.cc  tg_bench_suite.cc
fastgram/: __init__.py  cli.py  cpp_engine.cpp  engine.py  index_catalog.json  models.py
gram/: __init__.py  cli.py  cpp_engine.cpp  engine.py  index_catalog.json  index_catalog.py
gram-decoding/: README.md
gram-decoding/gram_decoding/: __init__.py  decoding.py  draft.py
gram-decoding/scripts/: gram_decode.py
gram-rl/: README.md
gram-rl/gram_rl/: __init__.py  gcs.py  grpo.py  gsm8k.py  logprobs.py  probe.py
gram-rl/rl/: __init__.py  algorithm.py  config.py
gram-rl/rl/models/: __init__.py  base.py  huggingface.py
gram-rl/rl/rewards/: __init__.py  base.py  gsm8k.py
gram-rl/rl/utils/: __init__.py  distributed.py  gcs.py
gram-rl/scripts/: inspect_drafts.py  sample_index.py  train.py  train_grpo_gsm8k.py
include/gram/: common.h  engine.h  index.h  mmap_file.h  thread_pool.h
index_factory/: build_indices.sh  build_medium.sh  build_offsets.py  build_table.sh  create_offsets.py  eval_topk.py  finish_build.sh  gcp_build.sh  ingest.py  ingest_medium.py  ingest_single.py  inspect_dataset.py  list_repo.py  overnight_build.sh  requirements.txt  runpod_all.sh  runpod_instance1.sh  runpod_instance2.sh  test_query.py
src/: engine.cc  mmap_file.cc  thread_pool.cc
tests/: tg_tests.cc
tools/: gen_bench_queries.py  run_bench.py  run_bench_suite.py  run_build_bench.py  tg_build_index.cc  tg_build_unigram_ranges.cc  tg_query.cc  tg_rpc.cc  tg_slice_index.cc  verify_built_index.py
